# sekiro-practice-tool

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  README.md  TROUBLESHOOTING.md  aobs.txt  build.py  index.js  jdsd_sekiro_practice_tool.toml  package-lock.json  package.json  vue.config.js
.github/workflows/: build.yml  test.yml
lib/libsekiro/: Cargo.toml
lib/libsekiro/src/: memedit.rs  pointers.rs  version.rs
lib/libsekiro/src/codegen/: base_addresses.rs
libsekiro/: Cargo.toml
libsekiro/src/: lib.rs  memedit.rs  pointers.rs  version.rs  versions.rs
libsekiro/src/codegen/: base_addresses.rs
no-logo/: Cargo.toml
no-logo/src/: lib.rs
practice-tool/: Cargo.toml  RELEASE-README.txt
practice-tool-ui/: Cargo.toml
practice-tool-utils/: Cargo.toml
practice-tool-utils/src/: lib.rs  widgets.rs
practice-tool-utils/src/util/: mod.rs  vk.rs
practice-tool/data/: RELEASE-README.txt  aobs.txt
practice-tool/src/: config.rs  lib.rs  main.rs  practice_tool.rs
practice-tool/src/widgets/: cycle_color.rs  cycle_speed.rs  flag.rs  mod.rs  nudge_pos.rs  position.rs  quitout.rs  savefile_manager.rs
proto/: findwindow.py
public/: index.html
src/: App.vue  config.cpp  config.h  dllmain.cpp  memory.cpp  memory.h  ui.cpp  ui.h
src/dll/: config.cpp  dllmain.cpp  memory.cpp  memory.h  ui.cpp  ui.h
src/injector/: injector.cpp  resources.rc
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/src/codegen/: aob_scans.rs  base_addresses.rs  mod.rs
