[workspace]
resolver = "2"
members = [
  "practice-tool",
  "practice-tool-utils",
  "libsekiro",
  "no-logo",
  "xtask"
]

[workspace.package]
version = "1.6.2"
authors = ["Andrea Venuta <venutawebdesign@gmail.com>"]

[profile.dev]
opt-level = 2
debug = 2

[profile.release]
lto = true
codegen-units = 1
opt-level = 3

[workspace.dependencies]
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
hudhook = { version = "0.6.5", features = ["dx11", "inject"], default-features = false }
practice-tool-core = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
practice-tool-tasks = { git = "https://github.com/veeenu/practice-tool-core", version = "0.1.0" }
imgui = "0.11.0"

[workspace.dependencies.windows]
version = "0.54.0"
features = [
  "Win32_Foundation",
  "Win32_Storage_FileSystem",
  "Win32_System_LibraryLoader",
  "Win32_System_Memory",
  "Win32_System_Diagnostics_Debug",
  "Win32_System_ProcessStatus",
  "Win32_System_SystemInformation",
  "Win32_System_SystemServices",
  "Win32_System_Threading",
  "Win32_UI_Input_XboxController", 
]
