[package]
name = "no-logo"
version = "0.4.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]
name = "dinput8"
 
[dependencies]
libsekiro = { path = "../libsekiro" }
u16cstr = "0.3.0"
widestring = "0.5.1"

[dependencies.windows]
version = "0.48.0"
features = [
  "Win32_Foundation",
  "Win32_System_LibraryLoader", 
  "Win32_System_Memory",
  "Win32_System_SystemInformation", 
  "Win32_System_SystemServices", 
  "Win32_UI_WindowsAndMessaging",
]

