[package]
name = "practice-tool-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
pkg-version = "1.0.0"
open = "4.0.2"
tracing-subscriber = "0.3.17"
libsekiro = { path = "../libsekiro" }
hudhook.workspace = true
windows.workspace = true
parking_lot = "0.12.1"
serde = { version = "1.0.160", features = ["derive"] }
