[package]
name = "sekiro-practice-tool"
version = "0.4.0"
edition = "2021"

[[bin]]
name = "jdsd_sekiro_practice_tool"
path = "src/main.rs"

[lib]
crate-type = ["cdylib", "rlib"]
name = "libjdsd_sekiro_practice_tool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
const_format = "0.2.30"
pkg-version = "1.0.0"
tracing-subscriber = "0.3.17"
open = "4.0.2"
serde = { version = "1.0.160", features = ["derive"] }
serde_path_to_error = "0.1.11"
toml = "0.7.3"
regex = "1.8.1"
semver = "1.0.17"
dll-syringe = { git = "https://github.com/OpenByteDev/dll-syringe" }
libsekiro = { path = "../libsekiro" }
practice-tool-utils = { path = "../practice-tool-utils" }
hudhook.workspace = true
windows.workspace = true
ureq = { version = "2.6.2", features = ["json"] }
