[package]
name = "xtask"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
dotenv = "0.15.0"
heck = "0.4.0"
pelite = "0.10.0"
regex = "1.5.5"
textwrap = "0.15.0"
zip = "0.6"

serde_json.workspace = true
practice-tool-tasks.workspace = true
