[package]
name = "libsekiro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.16"
widestring = "0.5.1"
serde = "1.0.136"
serde_json = "1.0.79"
parking_lot = "0.12.0"
windows = { workspace = true }
lazy_static = "1.4.0"
tracing = "0.1.37"
